src/test/deca/context/invalid/not_inst.deca
//Test pour not

//Resultat: can't apply 'not' to a int

{
    int x = 0;
    x = !x;
    println(x) ; 
}